--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                                 </a>
                                 <ul class="dropdown-menu" role="menu" id="MapControls"> 
                                     <li class="dropdown-submenu">
-                                        <a href="#" >Map Styles</span>
+                                        <a href="#" >Map Styles 
                                         </a>
                                         <ul class="dropdown-menu" role="menu" id="mapstyles"> 
                                             <li role="presentation" class="dropdown-header">Select your favourite Mapstyle!</li>
                                         </ul>
                                     </li> 
                                     <li class="dropdown-submenu">
-                                        <a href="#" >Overlays</span>
+                                        <a href="#" >Overlays 
                                         </a>
                                         <ul class="dropdown-menu" role="menu" id="overlays">
                                             <li role="presentation" class="dropdown-header">Overlays give additional information.</li>
